<resources>
    <string name="app_name">HeroCam</string>

    <!-- Drawer menu items -->
    <string name="drawer_menu_camera">HeroCam</string>
    <string name="drawer_menu_help">Help</string>
    <string name="drawer_menu_rate">Rate Us</string>
    <string name="drawer_menu_contact">Contact Us</string>
    <string name="drawer_menu_about">About</string>

    <!-- Help -->
    <string name="help_text_step_1">Just take a photo of a landmark you find interesting.</string>
    <string name="help_text_step_2">HeroCam identifies the landmark with a magic algorithm.</string>
    <string name="help_text_step_3">Sit back and learn everything you need about it.</string>

    <!-- About -->
    <string name="about_version">Version %1$s.%2$d</string>
    <string name="about_description">Your personal tourist guide.</string>
    <string name="about_learn_more">LEARN MORE</string>

    <!-- Don't translate -->
    <string name="drawer_menu_open">Open navigation drawer</string>
    <string name="drawer_menu_close">Close navigation drawer</string>

</resources>
