...
        android:layout_height="wrap_content">

        <ImageView
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/about_icon"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/about_logo" />

        <TextView
            android:id="@+id/about_version"
...
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_learn_more" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/about_learn_more_icon"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about_github"/>

    </LinearLayout>
...
